--- a/ThongKe/Views/Shared/_Leftmenu.cshtml
+++ b/ThongKe/Views/Shared/_Leftmenu.cshtml
@@ -165,7 +165,7 @@
                             <li class="nav-item">
                                 <a asp-action="DoanhSoTheoThiTruong" asp-controller="BaoCao" class="nav-link">
                                     <i class="far fa-circle nav-icon"></i>
-                                    <p>Doanh số theo thị trường</p>
+                                    <p>Doanh số theo thị trường (IB)</p>
                                 </a>
                             </li>
 
