--- a/ThongKe/Views/Users/Edit.cshtml
+++ b/ThongKe/Views/Users/Edit.cshtml
@@ -45,7 +45,7 @@
 
 
             <form method="post" autocomplete="off" enctype="multipart/form-data">
-                <div class="p-4 border rounded">
+                @*<div class="p-4 border rounded">*@
 
                     <input type="hidden" asp-for="OldPass" value="@Model.User.Password" />
                     <input type="hidden" asp-for="User.Password" />
@@ -57,7 +57,7 @@
                     <div class="form-group row">
 
                         <div class="col-2">
-                            <label asp-for="User.Username"></label>
+                            <label asp-for="User.Username"></label><span class="text-danger">(*)</span>
                         </div>
                         <div class="col-4">
                             <input class="form-control" asp-for="User.Username" readonly />
@@ -65,7 +65,7 @@
                         </div>
 
                         <div class="col-2">
-                            <label asp-for="User.Hoten"></label>
+                            <label asp-for="User.Hoten"></label><span class="text-danger">(*)</span>
                         </div>
                         <div class="col-4">
                             <input class="form-control" asp-for="User.Hoten" />
@@ -77,7 +77,7 @@
                     <div class="form-group row">
 
                         <div class="col-2">
-                            <label asp-for="User.Password"></label>
+                            <label asp-for="User.Password"></label><span class="text-danger">(*)</span>
                         </div>
                         <div class="col-4">
                             <input class="form-control" asp-for="PassToEdit" />
@@ -85,7 +85,7 @@
                         </div>
 
                         <div class="col-2">
-                            <label asp-for="User.Daily"></label>
+                            <label asp-for="User.Daily"></label><span class="text-danger">(*)</span>
                         </div>
                         <div class="col-4">
                             <select asp-for="User.Daily" class="form-control border-input "
@@ -101,7 +101,7 @@
                     <div class="form-group row">
 
                         <div class="col-2">
-                            <label asp-for="User.Chinhanh"></label>
+                            <label asp-for="User.Chinhanh"></label><span class="text-danger">(*)</span>
                         </div>
                         <div class="col-4">
                             <select asp-for="User.Chinhanh" class="form-control border-input"
@@ -110,7 +110,7 @@
                         </div>
 
                         <div class="col-2">
-                            <label asp-for="User.Trangthai"></label>
+                            <label asp-for="User.Trangthai"></label><span class="text-danger">(*)</span>
                         </div>
                         <div class="col-4">
                             <input type="checkbox" asp-for="User.Trangthai" />
@@ -123,7 +123,7 @@
                     <div class="form-group row">
 
                         <div class="col-2">
-                            <label asp-for="User.Khoi"></label>
+                            <label asp-for="User.Khoi"></label><span class="text-danger text-bold">(**)</span>
                         </div>
                         <div class="col-4">
                             <select asp-for="User.Khoi" class="form-control border-input "
@@ -133,7 +133,7 @@
                         </div>
 
                         <div class="col-2">
-                            <label asp-for="User.RoleId"></label>
+                            <label asp-for="User.RoleId"></label><span class="text-danger  text-bold">(**)</span>
                         </div>
                         <div class="col-4">
                             <select asp-for="User.RoleId" class="form-control border-input " id="ddlRoleId"
@@ -147,7 +147,7 @@
                     <div class="form-group row">
 
                         <div class="col-2">
-                            <label asp-for="User.PhongBanQL"></label>
+                            <label asp-for="User.PhongBanQL"></label> (IB)
                         </div>
                         <div class="col-4">
                             <input type="hidden" asp-for="User.PhongBanQL" id="hidDdlPhongBanQL" />
@@ -158,7 +158,7 @@
                         </div>
 
                         <div class="col-2">
-                            <label asp-for="User.DaiLyQL"></label>
+                            <label asp-for="User.DaiLyQL"></label> (ND, OB)
                         </div>
                         <div class="col-4">
                             <input type="hidden" asp-for="User.DaiLyQL" id="hidDdlDaiLyQL" />
@@ -173,12 +173,20 @@
                     <div class="form-group row">
 
                         <div class="col-2">
-                            <label asp-for="User.PhongBanId"></label>
+                            <label asp-for="User.PhongBanId"></label><span class="text-danger  text-bold">(**)</span>
                         </div>
                         <div class="col-4">
                             <select asp-for="User.PhongBanId" class=" form-control"
                                     asp-items="@(new SelectList(Model.PhongBans, "Maphong", "Tenphong"))" id="ddlPhongBanId">
                             </select>
+                            <span class="text-danger" asp-validation-for="User.PhongBanId"></span>
+                        </div>
+                        
+                        <div class="col-2">
+                            <label asp-for="User.Nhom"></label><span class="text-danger  text-bold">(**)</span>
+                        </div>
+                        <div class="col-4">
+                            <input class="form-control" asp-for="User.Nhom" readonly/>
                             <span class="text-danger" asp-validation-for="User.PhongBanId"></span>
                         </div>
 
@@ -189,7 +197,7 @@
                         <a class="btn btn-success" asp-action="Index"><i class="fas fa-backward"></i></a>
                     </div>
 
-                </div>
+                @*</div>*@
             </form>
 
 
