--- a/ThongKe/Views/BaoCao/DoanhSoTheoSale.cshtml
+++ b/ThongKe/Views/BaoCao/DoanhSoTheoSale.cshtml
@@ -1,7 +1,11 @@
 ﻿@model BaoCaoViewModel
 
-@{
+@*@{
     ViewData["Title"] = "DoanhSoTheoSale - Thống kê";
+    int i = 1;
+}
+*@
+@{
     int i = 1;
 }
 
