--- a/ThongKe/Views/BaoCao/SaleTheoQuay.cshtml
+++ b/ThongKe/Views/BaoCao/SaleTheoQuay.cshtml
@@ -1,29 +1,12 @@
 ﻿@model DoanhthuSaleQuayViewModel
-<!-- Content Header (Page header) -->
-<section class="content-header">
-    <div class="container-fluid">
-        <div class="row mb-2">
-            <div class="col-sm-6">
-                <h1>Sale theo ngày bán</h1>
-            </div>
-            <div class="col-sm-6">
-                <ol class="breadcrumb float-sm-right">
-                    <li class="breadcrumb-item"><a href="/">Home</a></li>
-                    <li class="breadcrumb-item active">BÁO CÁO DOANH THU SALES THEO NGÀY BÁN</li>
-                </ol>
-            </div>
-        </div>
-    </div><!-- /.container-fluid -->
-</section>
-
 
 <!-- Main content -->
-<section class="content">
+<section class="content pt-2">
 
     <!-- Default box -->
     <div class="card">
         <div class="card-header">
-            <h3 class="card-title"><i class="fas fa-search text-info"></i> Tìm Kiếm</h3>
+            <h3 class="card-title text-bold"> BÁO CÁO DOANH THU SALES THEO NGÀY BÁN</h3>
 
             <div class="card-tools">
                 <button type="button" class="btn btn-tool" data-card-widget="collapse" data-toggle="tooltip" title="Collapse">
@@ -34,79 +17,55 @@
                 </button>
             </div>
         </div>
-        <div class="card-body">
+        <div class="card-body p-2">
 
 
             <form id="formSearch" autocomplete="off">
-                <div class="p-4 border rounded">
+                <div class="container" style="padding-bottom:5px; background-color: aliceblue;" id="search">
 
-                    <div class="form-group row">
-                        
-                        <div class="col-2">
-                            Từ ngày
-                            <input value="@ViewBag.searchFromDate" name="tungay" class="form-control maskInput" id="txtTuNgay" />
+                    <div class="col-md-12">
+                        <div class="row" style="padding-top: 10px;">
+
+                            <div class="col-md-2">
+                                Từ ngày
+                                <input value="@ViewBag.searchFromDate" name="tungay" class="form-control form-control-sm maskInput" id="txtTuNgay" />
+                            </div>
+
+                            <div class="col-md-2">
+                                Đến ngày
+                                <input value="@ViewBag.searchToDate" name="denngay" class="form-control form-control-sm maskInput" id="txtDenNgay" />
+                            </div>
+
+                            <div class="col-md-2">
+                                Chi nhánh
+                                <select name="chiNhanh" class="form-control form-control-sm border-input ddlChiNhanh" id="ddlChiNhanh"
+                                        asp-items="@(new SelectList(Model.chiNhanhToReturnViewModels,"Name","Name", ViewBag.chiNhanh))">
+                                </select>
+                            </div>
+
+                            <div class="col-md-2">
+                                Khối
+                                <select class="form-control form-control-sm" id="ddlKhoi" name="khoi"
+                                        asp-items="@(new SelectList(Model.KhoiViewModels_KL, "Name", "Name", ViewBag.khoi))">
+                                </select>
+                            </div>
+
+                            <div class="col-md-2">
+                                <br />
+                                <span class="btn-group btn-block">
+                                    <button type="submit" id="btnSearch" class="btn btn-outline-primary btn-sm" formaction="/BaoCao/SaleTheoQuay"><i class="fa fa-search"></i></button>
+                                    <button type="submit" id="btnExportAll1" class="btn btn-outline-success btn-sm" formmethod="post" formaction="/BaoCao/SaleTheoQuayPost"><i class="fas fa-file-export"></i></button>
+                                </span>
+                            </div>
+
                         </div>
-
-                        <div class="col-2">
-                            Đến ngày
-                            <input value="@ViewBag.searchToDate" name="denngay" class="form-control maskInput" id="txtDenNgay" />
-                        </div>
-
-                        <div class="col-2">
-                            Chi nhánh
-                            <select name="chiNhanh" class="form-control border-input ddlChiNhanh" id="ddlChiNhanh"
-                                    asp-items="@(new SelectList(Model.chiNhanhToReturnViewModels,"Name","Name", ViewBag.chiNhanh))">
-                            </select>
-                        </div>
-
-                        <div class="col-2">
-                            Khối
-                            <select class="form-control" id="ddlKhoi" name="khoi"
-                                    asp-items="@(new SelectList(Model.KhoiViewModels_KL, "Name", "Name", ViewBag.khoi))">
-                            </select>
-                        </div>
-
-                        <div class="col-2">
-                            <br />
-                            <span class="btn-group">
-                                <button type="submit" id="btnSearch" class="btn btn-outline-primary" formaction="/BaoCao/SaleTheoQuay"><i class="fa fa-search"></i></button>
-                                <button type="submit" id="btnExportAll1" class="btn btn-outline-success" formmethod="post" formaction="/BaoCao/SaleTheoQuayPost"><i class="fas fa-file-export"></i></button>
-                            </span>
-                        </div>
-
                     </div>
 
 
                 </div>
 
             </form>
-
-        </div>
-        <!-- /.card-body -->
-
-    </div>
-    <!-- /.card -->
-
-</section>
-<!-- /.content -->
-<!-- Main content -->
-<section class="content">
-
-    <!-- Default box -->
-    <div class="card">
-        <div class="card-header">
-            <h3 class="card-title"><i class="fas fa-list-alt text-info"></i> Danh Sách</h3>
-
-            <div class="card-tools">
-                <button type="button" class="btn btn-tool" data-card-widget="collapse" data-toggle="tooltip" title="Collapse">
-                    <i class="fas fa-minus"></i>
-                </button>
-                <button type="button" class="btn btn-tool" data-card-widget="remove" data-toggle="tooltip" title="Remove">
-                    <i class="fas fa-times"></i>
-                </button>
-            </div>
-        </div>
-        <div class="card-body">
+            <br />
             <div style="overflow-x:auto;">
                 <table class="table mytable text-nowrap" id="listAll">
                     <thead>
@@ -152,21 +111,14 @@
                 </table>
             </div>
 
-
         </div>
         <!-- /.card-body -->
-        <div class="card-footer">
 
-        </div>
-        <!-- /.card-footer-->
     </div>
     <!-- /.card -->
 
 </section>
 <!-- /.content -->
-
-
-
 
 @section Scripts{
     <script>
@@ -187,4 +139,21 @@
         });
     </script>
     @*<script src="~/Admin/SaleTheoQuay/saleTheoQuayController.js"></script>*@
-}
+    }  <style>
+        /*#listDoanhSoTheoSale {
+                                                                                                    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+                                                                                                }*/
+
+        #search {
+            box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        }
+
+        /*.tblTour .cursor-pointer:hover {
+                                                                                                    background-color: #3E5C9A;
+                                                                                                    cursor: pointer;
+                                                                                                }*/
+
+        /*.hoverClass {
+                                                                                                    background-color: #3E5C9A;
+                                                                                                }*/
+    </style>
