--- a/ThongKe/Views/BaoCao/DoanhSoTheoThiTruong.cshtml
+++ b/ThongKe/Views/BaoCao/DoanhSoTheoThiTruong.cshtml
@@ -6,7 +6,7 @@
 }
 
 <!-- Main content -->
-<section class="content">
+<section class="content pt-2">
 
     <!-- Default box -->
     <div class="card">
