--- a/ThongKe/Views/BaoCao/SaleTheoTuyenThamQuan.cshtml
+++ b/ThongKe/Views/BaoCao/SaleTheoTuyenThamQuan.cshtml
@@ -1,5 +1,5 @@
 ﻿@model DoanhThuSaleTuyenViewModel
-<!-- Content Header (Page header) -->
+@*<!-- Content Header (Page header) -->
 <section class="content-header">
     <div class="container-fluid">
         <div class="row mb-2">
@@ -16,14 +16,14 @@
     </div><!-- /.container-fluid -->
 </section>
 
-
+*@
 <!-- Main content -->
-<section class="content">
+<section class="content pt-2">
 
     <!-- Default box -->
     <div class="card">
         <div class="card-header">
-            <h3 class="card-title"><i class="fas fa-search text-info"></i> Tìm Kiếm</h3>
+            <h3 class="card-title text-bold">BÁO CÁO DOANH THU THEO TUYẾN THAM QUAN</h3>
 
             <div class="card-tools">
                 <button type="button" class="btn btn-tool" data-card-widget="collapse" data-toggle="tooltip" title="Collapse">
@@ -34,81 +34,61 @@
                 </button>
             </div>
         </div>
-        <div class="card-body">
+        <div class="card-body p-2">
 
 
             <form id="formSearch" autocomplete="off">
-                <div class="p-4 border rounded">
+                @*<div class="p-4 border rounded">*@
 
-                    <div class="form-group row">
-                       
-                        <div class="col-2">
-                            Từ ngày
-                            <input value="@ViewBag.searchFromDate" name="tungay" class="form-control maskInput" id="txtTuNgay" />
-                        </div>
+                <div class="form-group row">
 
-                        <div class="col-2">
-                            Đến ngày
-                            <input value="@ViewBag.searchToDate" name="denngay" class="form-control maskInput" id="txtDenNgay" />
-                        </div>
+                    <div class="col-md-2">
+                        Từ ngày
+                        <input value="@ViewBag.searchFromDate" name="tungay" class="form-control form-control-sm maskInput" id="txtTuNgay" />
+                    </div>
 
-                        <div class="col-2">
-                            Khối
-                            <select class="form-control" id="ddlKhoi" name="khoi"
-                                    asp-items="@(new SelectList(Model.KhoiViewModels_KL, "Name", "Name", ViewBag.khoi))">
-                            </select>
-                        </div>
+                    <div class="col-md-2">
+                        Đến ngày
+                        <input value="@ViewBag.searchToDate" name="denngay" class="form-control form-control-sm maskInput" id="txtDenNgay" />
+                    </div>
 
-                        <div class="col-2">
-                            Tuyến tham quan
-                            <select name="tuyentq" class="form-control border-input " id="ddlTuyentq"
-                                    asp-items="@(new SelectList(Model.tuyenThamQuanViewModels,"tuyentq","tuyentq", ViewBag.ttq))">
-                            </select>
-                        </div>
+                    <div class="col-md-2">
+                        Chi nhánh
+                        <select name="chinhanh" class="form-control form-control-sm border-input ddlChiNhanh" id="ddlChiNhanh"
+                                asp-items="@(new SelectList(Model.chiNhanhToReturnViewModels,"Name","Name", ViewBag.chiNhanh))">
+                        </select>
+                    </div>
 
+                    <div class="col-md-2">
+                        Khối
+                        <select class="form-control form-control-sm" id="ddlKhoi" name="khoi"
+                                asp-items="@(new SelectList(Model.KhoiViewModels_KL, "Name", "Name", ViewBag.khoi))">
+                        </select>
+                    </div>
 
-
-                        <div class="col-1">
-                            <br />
-                            <span class="btn-group">
-                                <button type="submit" id="btnSearch" class="btn btn-outline-primary" formaction="/BaoCao/SaleTheoTuyenThamQuan"><i class="fa fa-search"></i></button>
-                                <button type="submit" id="btnExportAll1" class="btn btn-outline-success" formmethod="post" formaction="/BaoCao/SaleTheoTuyenThamQuanPost"><i class="fas fa-file-export"></i></button>
-                            </span>
-                        </div>
-
+                    <div class="col-md-2">
+                        Tuyến tham quan
+                        <select name="tuyentq" class="form-control form-control-sm border-input " id="ddlTuyentq"
+                                asp-items="@(new SelectList(Model.tuyenThamQuanViewModels,"tuyentq","tuyentq", ViewBag.ttq))">
+                        </select>
                     </div>
 
 
+
+                    <div class="col-md-2">
+                        <br />
+                        <span class="btn-group btn-block">
+                            <button type="submit" id="btnSearch" class="btn btn-outline-primary btn-sm" formaction="/BaoCao/SaleTheoTuyenThamQuan"><i class="fa fa-search"></i></button>
+                            <button type="submit" id="btnExportAll1" class="btn btn-outline-success btn-sm" formmethod="post" formaction="/BaoCao/SaleTheoTuyenThamQuanPost"><i class="fas fa-file-export"></i></button>
+                        </span>
+                    </div>
+
                 </div>
 
+
+                @*</div>*@
+
             </form>
-
-        </div>
-        <!-- /.card-body -->
-
-    </div>
-    <!-- /.card -->
-
-</section>
-<!-- /.content -->
-<!-- Main content -->
-<section class="content">
-
-    <!-- Default box -->
-    <div class="card">
-        <div class="card-header">
-            <h3 class="card-title"><i class="fas fa-list-alt text-info"></i> Danh Sách</h3>
-
-            <div class="card-tools">
-                <button type="button" class="btn btn-tool" data-card-widget="collapse" data-toggle="tooltip" title="Collapse">
-                    <i class="fas fa-minus"></i>
-                </button>
-                <button type="button" class="btn btn-tool" data-card-widget="remove" data-toggle="tooltip" title="Remove">
-                    <i class="fas fa-times"></i>
-                </button>
-            </div>
-        </div>
-        <div class="card-body">
             <div style="overflow-x:auto;">
                 <table class="table mytable text-nowrap" id="listAll">
                     <thead>
@@ -155,6 +135,33 @@
 
                 </table>
             </div>
+        </div>
+        <!-- /.card-body -->
+
+    </div>
+    <!-- /.card -->
+
+</section>
+<!-- /.content -->
+@*<!-- Main content -->
+<section class="content">
+
+    <!-- Default box -->
+    <div class="card">
+        <div class="card-header">
+            <h3 class="card-title"><i class="fas fa-list-alt text-info"></i> Danh Sách</h3>
+
+            <div class="card-tools">
+                <button type="button" class="btn btn-tool" data-card-widget="collapse" data-toggle="tooltip" title="Collapse">
+                    <i class="fas fa-minus"></i>
+                </button>
+                <button type="button" class="btn btn-tool" data-card-widget="remove" data-toggle="tooltip" title="Remove">
+                    <i class="fas fa-times"></i>
+                </button>
+            </div>
+        </div>
+        <div class="card-body">
+
 
 
         </div>
@@ -168,7 +175,7 @@
 
 </section>
 <!-- /.content -->
-
+*@
 
 
 
@@ -189,6 +196,52 @@
             "info": true,
             "autoWidth": false,
         });
+
+$('#ddlTuyentq').select2();
+
+        $('#ddlKhoi').off('change').on('change', function () {
+            var khoi = "";
+
+            khoi = $('#ddlKhoi').val();
+            loadDdlTuyentq(khoi);
+        });
+
+        function loadDdlTuyentq(khoi) {
+        $('#ddlTuyentq').html('');
+        var option = '';
+
+        $.ajax({
+            url: '/BaoCao/GetAllTuyentqByKhoi',
+            type: 'GET',
+            data: {
+                khoi: khoi
+            },
+            dataType: 'json',
+            success: function (response) {
+
+                var data = JSON.parse(response.data);
+                //$('#ddlTuyentq').html('');
+
+                $.each(data, function (i, item) {
+                    option = option + '<option value="' + item.tuyentq + '">' + item.tuyentq + '</option>'; //chinhanh1
+
+                });
+
+                //for (var i = 0; i < data.length; i++) {
+                //    // set the key/property (input element) for your object
+                //    var ele = data[i];
+                //    //console.log(ele);
+                //    option = option + '<option value="' + ele + '">' + ele + '</option>'; //chinhanh1
+                //    // add the property to the object and set the value
+                //    //params[ele] = $('#' + ele).val();
+                //}
+
+                $('#ddlTuyentq').html(option);
+
+            }
+        });
+
+    }
     </script>
     @*<script src="~/Admin/TheoTuyentq/theoTuyentqController.js"></script>*@
-}
+    }
