--- a/ThongKe/Views/BaoCao/SaleTheoTuyenThamQuan.cshtml
+++ b/ThongKe/Views/BaoCao/SaleTheoTuyenThamQuan.cshtml
@@ -73,8 +73,6 @@
                         </select>
                     </div>
 
-
-
                     <div class="col-md-2">
                         <br />
                         <span class="btn-group btn-block">
@@ -197,7 +195,8 @@
             "autoWidth": false,
         });
 
-$('#ddlTuyentq').select2();
+//$('#ddlTuyentq').select2();
+//$('#ddlHttc').select2();
 
         $('#ddlKhoi').off('change').on('change', function () {
             var khoi = "";
