doan theo ngay di

--- a/ThongKe/Views/BaoCao/SaleTheoNgayDi.cshtml
+++ b/ThongKe/Views/BaoCao/SaleTheoNgayDi.cshtml
@@ -21,7 +21,7 @@
 
 
             <form id="formSearch" autocomplete="off">
-                <div class="container" style="padding-bottom:5px; background-color: aliceblue;" id="search">
+                <div style="padding-bottom:5px; background-color: aliceblue;" id="search">
                     <div class="col-md-12">
                         <div class="row" style="padding-top: 10px;">
 
@@ -144,5 +144,5 @@
         #search {
             box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
         }
-                                                                    }*/
+         
     </style>
