--- a/ThongKe/Views/BaoCao/SaleTheoTuyenThamQuan.cshtml
+++ b/ThongKe/Views/BaoCao/SaleTheoTuyenThamQuan.cshtml
@@ -179,6 +179,8 @@
 
 @section Scripts{
     <script>
+        khoi = $('#ddlKhoi').val();
+            loadDdlTuyentq(khoi);
 
         //$(function () {
         //    $("#datepicker").datepicker({
